contribution from 08/07/2019